--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-#program ini digunakan untuk pengaduan inspektorat kabupaten probolinggo
-#jika ingin mengembangkan program ini mohon untuk mencantumkan program asli dan pembuat program aslinya.
-#program ini di buat menggunakan php codeigniter dan bootstrap sebagai desain tampilannya, mysql sebagai databasenya.
-#pembuat saya sendiri "Hisbil Islami"
+Program ini digunakan untuk pengaduan inspektorat kabupaten probolinggo
+Jika ingin mengembangkan program ini mohon untuk mencantumkan program asli dan pembuat program aslinya.
+Program ini di buat menggunakan php codeigniter dan bootstrap sebagai desain tampilannya, mysql sebagai databasenya.
+Pembuat program ini saya sendiri "Hisbil Islami"
